Update Entrace Theme Transition.xaml

--- a/Entrace Theme Transition.xaml
+++ b/Entrace Theme Transition.xaml
@@ -14,7 +14,7 @@
 <Grid.RowDefinitions>
   <RowDefinition Height="140"/>
   <RowDefinition Height="*"/>
-<Grid.RowDefinitions>
+</Grid.RowDefinitions>
 ....
 <Grid/>
 
